--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "YOLO and YOLO-Radar trainers for Hawk - GPL-3.0-only"
 license = {text = "GPL-3.0-only"}
 requires-python = ">=3.8,<3.13"
 dependencies = [
-    "cmuhawk>=0.1.0 @ git+https://github.com/cmusatyalab/hawk.git",
+    "cmuhawk @ git+https://github.com/cmusatyalab/hawk.git",
     "torch>=2.2,<3.0",
     "torchvision>=0.17,<0.18",
     "opencv-python-headless>=4.7.0",
@@ -37,3 +37,7 @@ disallow_untyped_defs = true
 
 [tool.uv.sources]
 cmuhawk = { path = "../hawk", editable = true }
+
+[build-system]
+requires = ["uv_build>=0.10.3,<0.11.0"]
+build-backend = "uv_build"
