--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "YOLO and YOLO-Radar trainers for Hawk - GPL-3.0-only"
 license = {text = "GPL-3.0-only"}
 requires-python = ">=3.8,<3.13"
 dependencies = [
-    "cmuhawk @ git+https://github.com/cmusatyalab/hawk.git",
     "torch>=2.2,<3.0",
     "torchvision>=0.17,<0.18",
     "opencv-python-headless>=4.7.0",
@@ -16,6 +15,13 @@ dependencies = [
     "tensorboard>=2.1",
     "albumentations>=1.3",
     "requests>=2.32.4",
+]
+
+[dependency-groups]
+dev = [
+    "cmuhawk @ git+https://github.com/cmusatyalab/hawk.git",
+    "pytest",
+    "ruff",
 ]
 
 [project.entry-points."cmuhawk.models"]
